src/objects/CSV_Upload_Mapping_Column__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is the CSV Upload mapping for the CSV upload functionality.</description>
    <fields>
        <fullName>Accept_Multi_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This value shows if the target mapped to field is a multi picklist value or a single picklist vlaue</description>
        <inlineHelpText>This value shows if the target mapped to field is a multi picklist value or a single picklist vlaue</inlineHelpText>
        <label>Accept Multi Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSV_Upload_Recipient_Type__c</fullName>
        <description>This is the recipient type for csv upload process.</description>
        <inlineHelpText>This is the recipient type for csv upload process.</inlineHelpText>
        <label>CSV Upload Recipient Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSV_Upload_Type__c</fullName>
        <description>This is the type of CSV upload that needs to be performed. Possible option is Grant Award</description>
        <inlineHelpText>This is the type of CSV upload that needs to be performed. Possible option is Grant Award</inlineHelpText>
        <label>CSV Upload Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id_Type_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This column is used as external id type column and should not be mapped directly to another field.</description>
        <inlineHelpText>This column is used as external id type column and should not be mapped directly to another field.</inlineHelpText>
        <label>External Id Type Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>This is the group value for the specified column. This field was created initially to group Intermediaries.</description>
        <inlineHelpText>This is the group value for the specified column. This field was created initially to group Intermediaries.</inlineHelpText>
        <label>Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mapped_From_Field__c</fullName>
        <description>This is the From field in the CSV file. This value needs to be exactly the same as it appears on CSV.</description>
        <inlineHelpText>This is the From field in the CSV file. This value needs to be exactly the same as it appears on CSV.</inlineHelpText>
        <label>Mapped From Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapped_To_Field__c</fullName>
        <description>This is the From to in the CSV file. This value needs to be exactly the same as it is on the Target Object</description>
        <inlineHelpText>This is the From to in the CSV file. This value needs to be exactly the same as it is on the Target Object</inlineHelpText>
        <label>Mapped To Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Found_Error_Message__c</fullName>
        <description>This error message is shown when the Record Locator Query doesn&apos;t return any records.</description>
        <inlineHelpText>This error message is shown when the Record Locator Query doesn&apos;t return any records.</inlineHelpText>
        <label>Not Found Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Query_Result_Id_Mapped_to_Field__c</fullName>
        <description>This is the field that will be used to replace the Mapped to field.</description>
        <inlineHelpText>This is the field that will be used to replace the Mapped to field.</inlineHelpText>
        <label>Query Result Id Mapped to Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if the value of this column is a read only field on Salesforce or not. If the value is read only (e.g. Grant_Award__c.Name) then the value is saved in a temporary map on the SObject creator.</description>
        <inlineHelpText>This field indicates if the value of this column is a read only field on Salesforce or not. If the value is read only (e.g. Grant_Award__c.Name) then the value is saved in a temporary map on the SObject creator.</inlineHelpText>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Locator_Query__c</fullName>
        <description>This field holds the query string to retrieve the related record from the database.</description>
        <inlineHelpText>This field holds the query string to retrieve the related record from the database.</inlineHelpText>
        <label>Record Locator Query</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox shows if the column is a mandatory field for the input CSV file.</description>
        <inlineHelpText>This checkbox shows if the column is a mandatory field for the input CSV file.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_SObject_Creator_On_Record_Not_Found__c</fullName>
        <description>This field records the creator that needs to be run when the record locator query doesn&apos;t return any value.</description>
        <inlineHelpText>This field records the creator that needs to be run when the record locator query doesn&apos;t return any value.</inlineHelpText>
        <label>Run SObject Creator On Record Not Found</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Creator__c</fullName>
        <description>This is the SObject creator for this column mapping</description>
        <inlineHelpText>This is the SObject creator for this column mapping</inlineHelpText>
        <label>SObject Creator</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Type__c</fullName>
        <description>This is the Target SObject type through the CSV upload process</description>
        <inlineHelpText>This is the Target SObject type through the CSV upload process. Valid values are (Grant_Award__c)</inlineHelpText>
        <label>SObject Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Parser__c</fullName>
        <description>This is the name of the class which will parse the value for this column.</description>
        <inlineHelpText>This is the name of the class which will parse the value for this column.</inlineHelpText>
        <label>Value Parser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CSV Upload Mapping Column</label>
</CustomObject>